# Vulnera

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HTML-REPORT-UPDATE.md  LICENSE  README.md  build.rs  clippy.toml  docker-compose.redis.yml  docker-compose.yml  redis.conf  rustfmt.toml  test-all.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: backend-ecr.yml  ci.yml  deploy-frontend.yml  frontend.yml  frount.yml  main-azure-web.yml  main.yml  release.yml
Dep_python/: README.md  requirements.txt  run_analyzer.sh  sample_requirements.txt  vulnerability_analyzer.py
config/: default.toml  development.toml  production.toml  redis-examples.toml  staging.toml
coverage/: tarpaulin-report.html
docs/: ENV_GUIDE.md  README.md  REDIS-CACHE-GUIDE.md  admin-nvd-local-cache.md  api-examples.md  api-versioning.md  refactor-plan-osv-nvd-pest.md  research-fetter-vulfy.md
docs/research/: axum-framework.md  rust-crates.md  serde-serialization.md  tokio-runtime.md  vulnerability-apis.md
frontend/: .env.example  .env.remote  SECURITY_IMPROVEMENTS.md  index.html  package.json  switch-api.sh
frontend/src/: main.js
scripts/: .env.example  test-comprehensive.sh
scripts/build_workflow/: Makefile
scripts/docker/: .dockerignore
src/: config.rs  lib.rs  logging.rs  main.rs
src/application/: errors.rs  mod.rs  services.rs  tests.rs  use_cases.rs
src/db/: schema.sql
src/domain/: entities.rs  errors.rs  mod.rs  services.rs  value_objects.rs
src/infrastructure/: mod.rs  repositories.rs  resilience.rs
src/presentation/: middleware.rs  mod.rs  models.rs  routes.rs  tests.rs
tests/: cache_integration_tests.rs  integration_tests.rs  test_runner.rs
tests/unit/: mod.rs  (+4 more)
(+41 files in other folders)
